# obsidian-omnisearch

./: .babelrc  .eslintrc.js  .gitignore  .npmrc  .prettierrc.js  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  esbuild.config.mjs  eslint.config.mts  jest.config.js  manifest-beta.json  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  version-bump.mjs  versions.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
Doc Omnisearch/: Customization.md  How to use Omnisearch.md  Images, PDFs, and non-text documents.md  Index.md  Inject Omnisearch results into your search engine.md  Issues & Solutions.md  Public API & URL Scheme.md
Doc Omnisearch/.obsidian/: core-plugins-migration.json  publish.json
Doc Omnisearch/media/: omnisearch-web.webm
assets/: .gitignore  manifest.json  styles.css
src/: CmpInfileResult.svelte  CmpInput.svelte  CmpModal.svelte  CmpModalFile.svelte  CmpModalInFile.svelte  CmpModalVault.svelte  CmpNoteInternalResult.svelte  CmpNoteResult.svelte  CmpResultInFile.svelte  CmpResultNote.svelte  Component.svelte  api.ts  cache-manager.ts  database.ts  event-bus.ts  file-loader.ts  globals.ts  lib.rs  main.ts  modal.ts  modals.ts  notes-index.ts  notes-indexer.ts  notes.ts  obsidian.rs  pdf-manager.ts  pdf-parser.ts  pdf-worker.ts  query.ts  search-history.ts  search.ts  settings.ts  store.ts  stores.ts  suggestions.ts  types-obsidian.d.ts  types.d.ts  utils.ts
src/__mocks__/: obsidian.ts
src/components/: modals.ts  (+9 more)
(+40 files in other folders)
